5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1679_1103.log
== TEST (2019-04-26 21:33:57) 
-- CODE:
# Leitura dos numeros reais
x = float(input("Digite um valor para x: "))
a = float(input("Digite um valor para a: "))
b = float(input("Digite um valor para b: "))

# Verificacao se x pertence ao intervalo
if(a <= x) and (x <= b):
	print("x pertence ao intervalo a, b")
else:
	print("x nao pertence ao intervalo a, b")
	
	
-- OUTPUT:
x nao pertence ao intervalo a, b
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:38:48) 
-- CODE:
# Leitura dos numeros reais
x = float(input("Digite um valor para x: "))
a = float(input("Digite um valor para a: "))
b = float(input("Digite um valor para b: "))

# Verificacao se x pertence ao intervalo
if(b <= a):
	print("Entradas "a " e " b "invalidas")
elif(a <= x) and (x <= b):
	print(x, "pertence ao intervalo " a, "," b)
else:
	print(x, "nao pertence ao intervalo " a, "," b)
	
	
-- ERROR:
File "XXXX", line 8
    print("Entradas "a " e " b "invalidas")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:39:41) 
-- CODE:
# Leitura dos numeros reais
x = float(input("Digite um valor para x: "))
a = float(input("Digite um valor para a: "))
b = float(input("Digite um valor para b: "))

# Verificacao se x pertence ao intervalo
if(b <= a):
	print("Entradas ", a, " e ", b, "invalidas")
elif(a <= x) and (x <= b):
	print(x, "pertence ao intervalo ", a, ",", b)
else:
	print(x, "nao pertence ao intervalo ", a, ",", b)
	
	
-- OUTPUT:
2.0 nao pertence ao intervalo  3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:40:25) 
-- CODE:
# Leitura dos numeros reais
x = float(input("Digite um valor para x: "))
a = float(input("Digite um valor para a: "))
b = float(input("Digite um valor para b: "))

# Verificacao se x pertence ao intervalo
if(b <= a):
	print("Entradas ", a, " e ", b, "invalidas")
elif(a <= x) and (x <= b):
	print(x, "pertence ao intervalo ", a, ",", b)
else:
	print(x, "nao pertence ao intervalo ", a, ",", b)
	
	
-- OUTPUT:
2.0 nao pertence ao intervalo  3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:40:37) 
-- CODE:
# Leitura dos numeros reais
x = float(input("Digite um valor para x: "))
a = float(input("Digite um valor para a: "))
b = float(input("Digite um valor para b: "))

# Verificacao se x pertence ao intervalo
if(b <= a):
	print("Entradas ", a, " e ", b, "invalidas")
elif(a <= x) and (x <= b):
	print(x, "pertence ao intervalo ", a, ",", b)
else:
	print(x, "nao pertence ao intervalo ", a, ",", b)
	
	
-- OUTPUT:
2.0 nao pertence ao intervalo  3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:41:01) 
-- CODE:
# Leitura dos numeros reais
x = float(input("Digite um valor para x: "))
a = float(input("Digite um valor para a: "))
b = float(input("Digite um valor para b: "))

# Verificacao se x pertence ao intervalo
if(b <= a):
	print("Entradas", a, " e ", b, "invalidas")
elif(a <= x) and (x <= b):
	print(x, "pertence ao intervalo ", a, ",", b)
else:
	print(x, "nao pertence ao intervalo ", a, ",", b)
	
	
-- OUTPUT:
2.0 nao pertence ao intervalo  3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 21:41:29) 
-- CODE:
# Leitura dos numeros reais
x = float(input("Digite um valor para x: "))
a = float(input("Digite um valor para a: "))
b = float(input("Digite um valor para b: "))

# Verificacao se x pertence ao intervalo
if(b <= a):
	print("Entradas", a, "e", b, "invalidas")
elif(a <= x) and (x <= b):
	print(x, "pertence ao intervalo ", a, ",", b)
else:
	print(x, "nao pertence ao intervalo ", a, ",", b)
	
	
-- OUTPUT:
2.0 nao pertence ao intervalo  3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 21:41:39) 
-- CODE:
# Leitura dos numeros reais
x = float(input("Digite um valor para x: "))
a = float(input("Digite um valor para a: "))
b = float(input("Digite um valor para b: "))

# Verificacao se x pertence ao intervalo
if(b <= a):
	print("Entradas", a, "e", b, "invalidas")
elif(a <= x) and (x <= b):
	print(x, "pertence ao intervalo ", a, ",", b)
else:
	print(x, "nao pertence ao intervalo ", a, ",", b)
	
	
-- EXECUTION TIME:
0.129437
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo  3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo  1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:10:07) 
-- CODE:
# Leitura dos numeros reais
x = float(input("Digite um valor para x: "))
a = float(input("Digite um valor para a: "))
b = float(input("Digite um valor para b: "))

# Verificacao se x pertence ao intervalo
if(b <= a):
	print("Entradas", a, "e", b, "invalidas")
elif(a <= x) and (x <= b):
	print(x, "pertence ao intervalo ", a, ",", b)
else:
	print(x, "nao pertence ao intervalo ", a, ",", b)
	
	
-- OUTPUT:
2.0 nao pertence ao intervalo  3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:10:35) 
-- CODE:
# Leitura dos numeros reais
x = float(input("Digite um valor para x: "))
a = float(input("Digite um valor para a: "))
b = float(input("Digite um valor para b: "))

# Verificacao se x pertence ao intervalo
if(b <= a):
	print("Entradas", a, "e", b, "invalidas")
elif(a <= x) and (x <= b):
	print(x, "pertence ao intervalo ", a, ",", b)
else:
	print(x, "nao pertence ao intervalo ", a, ",", b)
	
	
-- OUTPUT:
2.0 nao pertence ao intervalo  3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:14:47) 
-- CODE:
# Leitura dos numeros reais
x = float(input("Digite um valor para x: "))
a = float(input("Digite um valor para a: "))
b = float(input("Digite um valor para b: "))

# Verificacao se x pertence ao intervalo
if(b <= a):
	print("Entradas", a, "e", b, "invalidas")
elif(a <= x) and (x <= b):
	print(x, "pertence ao intervalo ", a, ",", b)
else:
	print(x, "nao pertence ao intervalo ", a, ",", b)
	
	
-- OUTPUT:
2.0 nao pertence ao intervalo  3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
